--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "/Users/vv/repos/full_stack_projects/ARTIST_BOOKING_SITE/fyyur/bin/python3.7"
 }
